refactor: /me endpoint and CORS allowing localhost
